# fast-linkedin-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: playwright-python-llms.txt
examples/: get_company_example.py  get_profile_example.py
examples/auth/: cookie_auth_example.py  password_auth_example.py
fast_linkedin_scraper/: __init__.py  config.py  exceptions.py  session.py
fast_linkedin_scraper/auth/: __init__.py  base.py  cookie.py  password.py
fast_linkedin_scraper/browser/: __init__.py  context.py
fast_linkedin_scraper/models/: __init__.py  common.py  company.py  job.py  person.py
fast_linkedin_scraper/scrapers/: __init__.py  utils.py
fast_linkedin_scraper/scrapers/company/: __init__.py  about.py  employees.py  followers.py  get_company.py  showcase.py  utils.py
fast_linkedin_scraper/scrapers/person/: __init__.py  accomplishments.py  connections.py  contacts.py  education.py  experience.py  get_person.py  interests.py  utils.py
tests/: get_company_test.py  get_contacts_test.py  get_profile_test.py
